Add interactive inputs for challenges 2 and 3

--- a/submissions/Insidiae/index.html
+++ b/submissions/Insidiae/index.html
@@ -14,12 +14,17 @@
     </section>
     <section>
       <h3>
-        Number of songs in the key of E: <span class="song-key-count"></span>
+        Number of songs in the key of
+        <select name="keys" id="challenge-2"></select
+        >: <span class="song-key-count"></span>
       </h3>
     </section>
     <section>
-      <h3>Artists with most songs:</h3>
-      <table id="challenge-3"></table>
+      <h3>
+        Sort songs by:
+        <select id="challenge-3-options"></select>
+      </h3>
+      <table id="challenge-3-result"></table>
     </section>
 
     <script src="https://d3js.org/d3.v7.min.js"></script>
