prettify result table

--- a/submissions/Insidiae/index.html
+++ b/submissions/Insidiae/index.html
@@ -7,21 +7,21 @@
     <title>FileIO</title>
   </head>
   <body>
-    <h1>File IO</h1>
+    <h1>File IO: Create a Spotify Data Logger</h1>
     <h2>Challenges</h2>
     <section>
-      <h3>Number of songs in the file: <span class="song-count"></span></h3>
+      <h3>1. Number of songs in the file: <span class="song-count"></span></h3>
     </section>
     <section>
       <h3>
-        Number of songs in the key of
+        2. Number of songs in the key of
         <select name="keys" id="challenge-2"></select
         >: <span class="song-key-count"></span>
       </h3>
     </section>
     <section>
       <h3>
-        Sort songs by:
+        3. Sort songs by:
         <select id="challenge-3-options"></select>
       </h3>
       <table id="challenge-3-result"></table>
